update dog testimonials

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 											Walker &amp; Runner</h1>
 											<p>Eager to keep your dogs happy &amp; healthy!</p>
 										</header>
-										<p>I have a lifetime experience caring for dogs of all shapes and sizes.  I am currently pursuing a Master's degree in Computational Science and would welcome the opportunity to step away from the computer screen and get some fresh air with your dog!  Whether your dog is enjoying their golden years and craving a gentle walk or an athletic energy ball needing a solid run, I'm here to be of service.</p>
+										<p>I have a lifetime experience caring for dogs of all shapes and sizes.  I am currently pursuing a Master's degree in Computational Science and would welcome the opportunity to step away from the computer screen and get some fresh air with your dog!  Whether your dog is enjoying their golden years and craving a gentle walk or an athletic energy ball needing a solid run or hike, I'm here to be of service.</p>
 									</div>
 									<span class="image object">
 										<img src="images/pic10.jpg" alt="" />
@@ -43,56 +43,40 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ipsum sed dolor</h2>
+										<h2>Testimonials</h2>
 									</header>
 									<div class="posts">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
+											<h3>Ranger</h3>
+											<p>I've known Charlie since I was 8 years old, and I'm still going strong at 15!  The way Charlie and I play has evolved over the years.  When I was young Charlie and I would spend hours at the beach playing fetch.  I can still play ball, but Charlie is much more gentle with his throws and is mindful when it is time to call it a day.</p>
+											<br />
+											<p>We also have had lots of fun over the years going on hikes.  Charlie knows as a fellow in my golden years, I can be a bit slow along the trails and get thirsty easily.  Charlie is always patient and has water available so I can hydrate along the way.</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
+											<h3>Gretchen</h3>
+											<p>I'm Ranger's sister, Gretchen.  I too have enjoyed many long afternoons at the beach with Charlie, although I'm more inclined to herd my brother than catch a ball.  I am 12 years old and have a collapsed lung, so Charlie takes extra good care to make sure I can keep up with him and Ranger on our adventures.</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Tempus ullamcorper</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
+											<h3>Maddie</h3>
+											<p>Hi my name is Maddie!  I'm a sweet, 6 year old pitbull who loves to be outside and go on hikes.  I was a bit difficult to manage on a leash when Charlie and I first met, but he was patient yet firm with me.  Now it is easy for everyone to take me on adventures!  I love getting all my energy out hiking with Charlie so I can be super lazy the rest of the day.  And yes, this is how I usually look after one of our hikes.</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Sed etiam facilis</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
+											<h3>Peter</h3>
+											<p>My name is Peter and I am 5 years old.  I have spent a lot of time with Charlie because Charlie watches me when my dad Dan goes out of town. I am generally a mellow dog who loves to get in one walk a day.  If I don't get it, you can tell!  Charlie loves to go on walks too, so it is his pleasure to take me out so we can romp around the neighborhood together.</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>Feugiat lorem aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
+											<h3>Lucy</h3>
+											<p>Hi my name is Lucy!  I am spirited 2 year old shiba inu who loves to hike and run in the woods.  When Charlie was living in Oakland, he would take me out to the beautiful redwood forests.  I tend to get aggressive with other dogs, but Charlie keeps me in check.  I know he does this both for mine and the other dog's safety and wellbeing.  I appreciate that he does so I can continue to enjoy the great outdoors!</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet varius aliquam</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
+											<h3>Des</h3>
+											<p>When my dad Nels got a job that required a long commute, I needed someone to help take me out during the middle of the day.  Even though I am a hunting dog, I am known to be very sensitive.  Charlie was a great companion to me when I was struggling with the long days apart from Nels.  Charlie took me on long runs so I could be distracted by nature and get some fresh air to keep my spirits up.</p>
 										</article>
 									</div>
 								</section>
