need to finish contact and services info

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3>Lucy</h3>
-											<p>Hi my name is Lucy!  I am spirited 2 year old shiba inu who loves to hike and run in the woods.  When Charlie was living in Oakland, he would take me out to the beautiful redwood forests.  I tend to get aggressive with other dogs, but Charlie keeps me in check.  I know he does this both for mine and the other dog's safety and wellbeing.  I appreciate that he does so I can continue to enjoy the great outdoors!</p>
+											<p>Hi my name is Lucy!  I am spirited 2 year old shiba inu who loves to hike and run in the woods.  When Charlie was living in Oakland, he would take me out to the beautiful redwood forests.  I tend to get aggressive with other dogs, but Charlie keeps me in check.  I know he does this both for mine and the other dog's safety and wellbeing.  I appreciate that he does so I can continue to enjoy the great outdoors.</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
@@ -120,6 +120,24 @@
 						</div>
 					</div>
 			</div>
+
+			<div id="wrapper">
+				<!-- Main -->
+					<div id="main">
+						<div class="inner">
+							<section>
+								<header class="main">
+									<h1>Contact</h1>
+								</header>
+								<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
+								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
+								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
+							</section>
+					</div>
+				</div>
+			</div>
+
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
