--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 		<title>Encinitas Dog Walker &amp; Runner</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
 		<!-- Wrapper -->
@@ -29,11 +27,11 @@
 									<div class="content">
 										<header>
 											<h1>Hi I’m Charlie,<br />
-											Neighborhood Dog<br />
+											Your Local Dog<br />
 											Walker &amp; Runner</h1>
 											<p>Eager to keep your dogs happy &amp; healthy!</p>
 										</header>
-										<p>I have a lifetime experience caring for dogs of all shapes and sizes.  I am currently pursuing a Master's degree in Computational Science and would welcome the opportunity to step away from the computer screen and get some fresh air with your dog!  Whether your dog is enjoying their golden years and craving a gentle walk or an athletic energy ball needing a solid run or hike, I'm here to be of service.</p>
+										<p>I have a lifetime experience caring for dogs of all ages and fitness levels.  I am currently pursuing a Master's degree in Computational Science and would welcome the opportunity to step away from a computer screen and get some fresh air with your dog!  Whether your furry friend is enjoying their golden years and craving a gentle walk or an athletic energy ball needing a solid run or hike, I'm here to be of service.</p>
 									</div>
 									<span class="image object">
 										<img src="images/pic10.jpg" alt="" />
@@ -125,26 +123,57 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<section>
-								<header class="main">
-									<h1>Contact</h1>
-								</header>
-								<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-							</section>
+							<br /><br />
+							<h1>Contact Charlie O'Hara Today!</h1>
+							<div class="col-xs-12 col-md-6">
+								<img class="profilepic" src="images/pic11.jpg" alt="" />
+							</div>
+							<div class="col-xs-12 col-md-6">
+								<h3>Questions? Concerns?</h3>
+								<br />
+								<h3>Are you interested in a service that isn't listed?</h3>
+								<br />
+								<h3>Or just ready to give your dog more adventure time?!</h3>
+								<br />
+								<h3>Please do not hesitate to contact me!</h3>
+								<br />
+								<h3>Phone: 805.403.3066</h3>
+								<br />
+								<h3>Email: charlie.b.ohara@gmail.com</h3>
+								<br />
+							</div>
+							<br />
+							<div class="clear"></div>
+							<div class="col-xs-12">
+					    	<div id="map"></div>
+							</div>
+					    <script>
+					      function initMap() {
+					        var home = {lat: 33.055191, lng: -117.250021};
+					        var map = new google.maps.Map(document.getElementById('map'), {
+					          zoom: 12,
+					          center: home
+					        });
+					        var marker = new google.maps.Marker({
+					          position: home,
+					          map: map
+					        });
+					      }
+					    </script>
+
+					    <script async defer
+					    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3PHRiRA6vCDuwim0IzhUZ_-HG3_u29cc&callback=initMap">
+					    </script>
+						</div>
 					</div>
 				</div>
 			</div>
-
-
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-
+	<br /><br />
 	</body>
 </html>
