update contact info

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 											<p>Eager to keep your dogs happy &amp; healthy!</p>
 										</header>
 										<p>I have a lifetime experience caring for dogs of all ages and fitness levels.  I am currently pursuing a Master's degree in Computational Science and would welcome the opportunity to step away from a computer screen and get some fresh air with your dog!  Whether your furry friend is enjoying their golden years and craving a gentle walk or an athletic energy ball needing a solid run or hike, I'm here to be of service.</p>
+										<h2>Phone: 805.403.3066</h2>
+										<h2>Email: charlie.b.ohara@gmail.com</h2>
 									</div>
 									<span class="image object">
 										<img src="images/pic10.jpg" alt="" />
@@ -125,21 +127,22 @@
 						<div class="inner">
 							<br /><br />
 							<h1>Contact Charlie O'Hara Today!</h1>
-							<div class="col-xs-12 col-md-6">
+							<br />
+							<div class="col-xs-12 col-md-4">
 								<img class="profilepic" src="images/pic11.jpg" alt="" />
 							</div>
-							<div class="col-xs-12 col-md-6">
+							<div class="col-xs-12 col-md-8">
 								<h3>Questions? Concerns?</h3>
 								<br />
 								<h3>Are you interested in a service that isn't listed?</h3>
 								<br />
-								<h3>Or just ready to give your dog more adventure time?!</h3>
+								<h3>Or just ready to give your dog more adventure time??</h3>
 								<br />
 								<h3>Please do not hesitate to contact me!</h3>
 								<br />
-								<h3>Phone: 805.403.3066</h3>
+								<h2>Phone: 805.403.3066</h2>
 								<br />
-								<h3>Email: charlie.b.ohara@gmail.com</h3>
+								<h2>Email: charlie.b.ohara@gmail.com</h2>
 								<br />
 							</div>
 							<br />
