--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
 											Walker &amp; Runner</h1>
 											<p>Eager to keep your dogs happy &amp; healthy!</p>
 										</header>
-										<p>I have a lifetime experience caring for dogs of all ages and fitness levels.  I am currently pursuing a Master's degree in Computational Science and would welcome the opportunity to step away from a computer screen and get some fresh air with your dog!  Whether your furry friend is enjoying their golden years and craving a gentle walk or an athletic energy ball needing a solid run or hike, I'm here to be of service.</p>
-										<h2>Phone: 805.403.3066</h2>
-										<h2>Email: charlie.b.ohara@gmail.com</h2>
+										<p>I have a lifetime experience caring for dogs of all ages and fitness levels.  I am currently pursuing a Master's degree in Computational Science and would welcome the opportunity to step away from a computer screen and get some fresh air with your dog!  I never never pack walk, so your pup will have my full attention. Whether your furry friend is enjoying their golden years and craving a gentle walk or an athletic energy ball needing a solid run or hike, I'm here to be of service.</p>
 									</div>
 									<span class="image object">
 										<img src="images/pic10.jpg" alt="" />
