--- a/index.html
+++ b/index.html
@@ -138,13 +138,11 @@
 								<br />
 								<h3>Please do not hesitate to contact me!</h3>
 								<br />
-								<h2>Phone: 805.403.3066</h2>
-								<br />
-								<h2>Email: charlie.b.ohara@gmail.com</h2>
-								<br />
 							</div>
-							<br />
+							<h2 class="col-xs-12 col-md-6">Phone: 805.403.3066</h2>
+							<h2 class="col-xs-12 col-md-6">Email: charlie.b.ohara@gmail.com</h2>
 							<div class="clear"></div>
+							<br /><br />
 							<div class="col-xs-12">
 					    	<div id="map"></div>
 							</div>
