update contact info

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<div class="inner">
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Encinitas Dog Walker &amp; Runner</strong></a>
+									<h2>Encinitas Dog Walker &amp; Runner</h2>
 								</header>
 							<!-- Banner -->
 								<section id="banner">
@@ -126,10 +126,11 @@
 							<br /><br />
 							<h1>Contact Charlie O'Hara Today!</h1>
 							<br />
-							<div class="col-xs-12 col-md-4">
+							<div class="col-xs-12 col-md-3">
 								<img class="profilepic" src="images/pic11.jpg" alt="" />
 							</div>
-							<div class="col-xs-12 col-md-8">
+							<div class="col-xs-12 col-md-9">
+								<br />
 								<h3>Questions? Concerns?</h3>
 								<br />
 								<h3>Are you interested in a service that isn't listed?</h3>
@@ -139,10 +140,11 @@
 								<h3>Please do not hesitate to contact me!</h3>
 								<br />
 							</div>
-							<h2 class="col-xs-12 col-md-6">Phone: 805.403.3066</h2>
-							<h2 class="col-xs-12 col-md-6">Email: charlie.b.ohara@gmail.com</h2>
+							<div class="col-xs-12 col-md-9">
+								<h2>Call 805.403.3066 or email charlie.b.ohara@gmail.com</h2>
+							</div>
 							<div class="clear"></div>
-							<br /><br />
+							<br /><br /><br /><br />
 							<div class="col-xs-12">
 					    	<div id="map"></div>
 							</div>
