--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 											Walker &amp; Runner</h1>
 											<p>Eager to keep your dogs happy &amp; healthy!</p>
 										</header>
-										<p>I have a lifetime experience caring for dogs of all ages and fitness levels.  I am currently pursuing a Master's degree in Computational Science and would welcome the opportunity to step away from a computer screen and get some fresh air with your dog!  I never never pack walk, so your pup will have my full attention. Whether your furry friend is enjoying their golden years and craving a gentle walk or an athletic energy ball needing a solid run or hike, I'm here to be of service.</p>
+										<p>I have a lifetime's experience caring for dogs of all ages and fitness levels.  I am currently pursuing a Master's degree in Computational Science and would welcome the opportunity to step away from a computer screen and get some fresh air with your dog!  I never pack walk, so your pup will have my full attention. That being said, if you have more than one dog, I'd be more than happy to take them out together for the price of one. Whether your furry friend is enjoying their golden years and craving a gentle walk or an athletic energy ball needing a solid run or hike, I'm here to be of service.</p>
 									</div>
 									<span class="image object">
 										<img src="images/pic10.jpg" alt="" />
@@ -47,7 +47,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<h3>Ranger</h3>
-											<p>I've known Charlie since I was 8 years old, and I'm still going strong at 15!  The way Charlie and I play has evolved over the years.  When I was young Charlie and I would spend hours at the beach playing fetch.  I can still play ball, but Charlie is much more gentle with his throws and is mindful when it is time to call it a day.</p>
+											<p>I've known Charlie since I was 7 years old, and I'm still going strong at 15!  The way Charlie and I play has evolved over the years.  When I was young Charlie and I would spend hours at the beach playing fetch.  I can still play ball, but Charlie is much more gentle with his throws and is mindful when it is time to call it a day.</p>
 											<br />
 											<p>We also have had lots of fun over the years going on hikes.  Charlie knows as a fellow in my golden years, I can be a bit slow along the trails and get thirsty easily.  Charlie is always patient and has water available so I can hydrate along the way.</p>
 										</article>
@@ -64,12 +64,12 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>Peter</h3>
-											<p>My name is Peter and I am 5 years old.  I have spent a lot of time with Charlie because Charlie watches me when my dad Dan goes out of town. I am generally a mellow dog who loves to get in one walk a day.  If I don't get it, you can tell!  Charlie loves to go on walks too, so it is his pleasure to take me out so we can romp around the neighborhood together.</p>
+											<p>Hi I'm Peter!  I'm a 5 year old bundle of love.  I spend a lot of time with Charlie because he watches me when my dad Dan goes out of town. I am generally a mellow dog who loves to get in one walk a day.  If I don't get it, you can tell!  Charlie loves to go on walks too, so he genuinely enjoys taking me out around the block.  My dad is very grateful that Charlie takes such good care of me when he is on vacation.</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3>Lucy</h3>
-											<p>Hi my name is Lucy!  I am spirited 2 year old shiba inu who loves to hike and run in the woods.  When Charlie was living in Oakland, he would take me out to the beautiful redwood forests.  I tend to get aggressive with other dogs, but Charlie keeps me in check.  I know he does this both for mine and the other dog's safety and wellbeing.  I appreciate that he does so I can continue to enjoy the great outdoors.</p>
+											<p>Hi my name is Lucy!  I am spirited 2 year old who loves to hike and run in the woods.  When Charlie was living in Oakland, he would take me out to the beautiful redwood forests.  I tend to get aggressive with other dogs, so Charlie stays vigilent when we are out together and keeps me in check.  I know he does this both for mine and the other dog's safety and well-being.  I appreciate that he does so I can continue to enjoy the great outdoors.</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
@@ -88,29 +88,21 @@
 										<article>
 											<span class="icon fa-heart"></span>
 											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Neighborhood Walks</h3>
+												<p>I would love to take your dog for a 30 minute, 45 minute, or hour long walk in your neighborhood. A 30 minute walk is perfect for dogs with a medium energy level who need a little mid-day exercise.  A 45 minute walk is great for dogs who have above average energy and take a little longer to tire out or overweight dogs who need to work off a pound or two.  The hour long walk is recommended for very high energy dogs who need the extra exercise to tire them out.</p>
+												<h3>30 minute walk: $20</h3>
+												<h3>45 minute walk: $30</h3>
+												<h3>60 minute walk: $40</h3>
 											</div>
 										</article>
 										<article>
 											<span class="icon fa-heart-o"></span>
 											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon fa-heart-o"></span>
-											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon fa-heart"></span>
-											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Run/Hike in the Manchester Preserve Canyon</h3>
+												<p>Just a mile east of Interstate 5 in Encinitas lies the Manchester Preserve, a 123-acre open space that offers several miles of trails through coastal sage scrub and chaparral.  This is a great place for me to bring your athletic dog to run and hike so they can get the proper amount of daily exercise.  A 30 minute, 45 minute, or hour long session is a great source of exercise for your pet and is sure to send them home tired and happy.</p>
+												<h3>30 minute run: $40</h3>
+												<h3>45 minute run: $50</h3>
+												<h3>60 minute run: $60</h3>
 											</div>
 										</article>
 									</div>
@@ -130,7 +122,6 @@
 								<img class="profilepic" src="images/pic11.jpg" alt="" />
 							</div>
 							<div class="col-xs-12 col-md-9">
-								<br />
 								<h3>Questions? Concerns?</h3>
 								<br />
 								<h3>Are you interested in a service that isn't listed?</h3>
@@ -144,8 +135,8 @@
 								<h2>Call 805.403.3066 or email charlie.b.ohara@gmail.com</h2>
 							</div>
 							<div class="clear"></div>
-							<br /><br /><br /><br />
 							<div class="col-xs-12">
+								<br /><br />
 					    	<div id="map"></div>
 							</div>
 					    <script>
