--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 											Walker &amp; Runner</h1>
 											<p>Eager to keep your dogs happy &amp; healthy!</p>
 										</header>
-										<p>I have a lifetime's experience caring for dogs of all ages and fitness levels.  I am currently pursuing a Master's degree in Computational Science and would welcome the opportunity to step away from a computer screen and get some fresh air with your dog!  I never pack walk, so your pup will have my full attention. That being said, if you have more than one dog, I'd be more than happy to take them out together for the price of one. Whether your furry friend is enjoying their golden years and craving a gentle walk or an athletic energy ball needing a solid run or hike, I'm here to be of service.</p>
+										<p>I have a lifetime's experience caring for dogs of all ages and fitness levels.  I am a 27 year old athletic guy who is currently pursuing a Master's degree in Computational Science and would welcome the opportunity to step away from a computer screen and get some fresh air with your dog!  I never pack walk, so your pup will have my full attention. That being said, if you have more than one dog, I'd be more than happy to take them all out together for the price of one. Whether your furry friend is enjoying their golden years and craving a gentle walk or an athletic energy ball needing a solid run or hike, I'm here to be of service.</p>
 									</div>
 									<span class="image object">
 										<img src="images/pic10.jpg" alt="" />
