--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 										<article>
 											<span class="icon fa-heart"></span>
 											<div class="content">
-												<h3>Neighborhood Walks</h3>
+												<h3>Neighborhood Walk</h3>
 												<p>I would love to take your dog for a 30 minute, 45 minute, or hour long walk in your neighborhood. A 30 minute walk is perfect for dogs with a medium energy level who need a little mid-day exercise.  A 45 minute walk is great for dogs who have above average energy and take a little longer to tire out or overweight dogs who need to work off a pound or two.  The hour long walk is recommended for very high energy dogs who need the extra exercise to tire them out.</p>
 												<h3>30 minute walk: $20</h3>
 												<h3>45 minute walk: $30</h3>
