--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 										<article>
 											<span class="icon fa-heart-o"></span>
 											<div class="content">
-												<h3>Run/Hike in the Manchester Preserve Canyon</h3>
+												<h3>Run/Hike in the Manchester Preserve</h3>
 												<p>Just a mile east of Interstate 5 in Encinitas lies the Manchester Preserve, a 123-acre open space that offers several miles of trails through coastal sage scrub and chaparral.  This is a great place for me to bring your athletic dog to run and hike so they can get the proper amount of daily exercise.  A 30 minute, 45 minute, or hour long session is a great source of exercise for your pet and is sure to send them home tired and happy.</p>
 												<h3>30 minute run: $40</h3>
 												<h3>45 minute run: $50</h3>
